# pdfAnnotater

./: .dockerignore  .gitignore  404.html  CLAUDE.MD  DEPLOYMENT_CHECKLIST.md  Dockerfile  README.md  docker-compose.yml  import_berichte.py  index.html  install.sh  mkdocs.yml  pyproject.toml  ruff.toml  run_desktop.py  sitemap.xml  todo.md  wsgi.py
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml  release.yml
admin/benutzerverwaltung/: index.html
benutzerhandbuch/: index.html
benutzerhandbuch/annotationen/: index.html
benutzerhandbuch/export/: index.html
benutzerhandbuch/upload/: index.html
benutzerhandbuch/viewer/: index.html
deployment/docker/: index.html
deployment/produktion/: index.html
docs/: index.md  installation.md
docs/admin/: benutzerverwaltung.md
docs/benutzerhandbuch/: annotationen.md  export.md  index.md  upload.md  viewer.md
docs/deployment/: docker.md  produktion.md
docs/entwicklung/: api.md  architektur.md  testing.md
entwicklung/api/: index.html
entwicklung/architektur/: index.html
entwicklung/testing/: index.html
homebrew/: pdf-annotator.rb
installation/: index.html
packaging/: _build-inner.sh  build-deb.sh  env.example  nfpm.yml  pdf-annotator.service  postinstall.sh  preremove.sh
ref/: api.md  architecture.md  database.md  development.md  frontend.md  packaging-briefcase-evaluation.md  services.md
search/: search_index.json
src/pdf_annotator/: .pyscn.toml  app.py  config.py  desktop.py
src/pdf_annotator/.pyscn/reports/: analyze_20260228_000524.html  analyze_20260228_000651.html
src/pdf_annotator/models/: database.py  user.py
src/pdf_annotator/routes/: admin.py  ai.py  auth.py  export.py  swb.py  upload.py  viewer.py
src/pdf_annotator/services/: ai_client.py  data_manager.py  export_utils.py  markdown_exporter.py  pdf_generator.py  pdf_processor.py  swb_client.py
src/pdf_annotator/static/css/: styles.css
src/pdf_annotator/static/js/: documents.js  modal.js  theme.js  upload.js  viewer.js
src/pdf_annotator/templates/: base.html  documents.html  error.html  icons.html  index.html  swb_results.html  viewer.html
src/pdf_annotator/templates/admin/: index.html
src/pdf_annotator/templates/auth/: change_password.html  login.html  register.html
src/pdf_annotator/utils/: downloads.py  logger.py  validators.py
tests/: conftest.py  test_admin.py  test_ai.py  test_auth.py  test_database.py  test_markdown_exporter.py  test_pdf_generator.py  test_pdf_processor.py  test_routes.py  test_swb.py  test_validators.py
